[gd_scene load_steps=2 format=3 uid="uid://bnxg8kp13wc77"]

[ext_resource type="Script" path="res://src/ui-components/player-box/PlayerBox.gd" id="1_51hmb"]

[node name="PlayerBox" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
script = ExtResource("1_51hmb")

[node name="Position" type="Label" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "P"
horizontal_alignment = 1

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Cragno"
text_overrun_behavior = 4

[node name="Price" type="Label" parent="."]
layout_mode = 2
text = "12 M"

[node name="Remove" type="Button" parent="."]
layout_mode = 2
text = "-"

[node name="RemoveDialog" type="ConfirmationDialog" parent="."]
title = "REMOVE"
position = Vector2i(336, 79)
size = Vector2i(400, 110)

[node name="HBoxContainer" type="HBoxContainer" parent="RemoveDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 50.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RemoveDialog/HBoxContainer"]
layout_mode = 2
text = "REMOVE_PRICE"

[node name="Price" type="LineEdit" parent="RemoveDialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PRICE"

[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
[connection signal="confirmed" from="RemoveDialog" to="." method="_on_remove_dialog_confirmed"]
